--- a/css/sample.scss
+++ b/css/sample.scss
@@ -126,9 +126,9 @@ body {
                     top: 35%;
                     left: calc(50% - 300px);
                 }
-                @media (max-width:659px) {
+                @media (max-width:767px) {
                     top: 25%;
-                    left: calc(50% - 250px);
+                    left: calc(50% - 140px);
                 }
 
                 button {
@@ -149,6 +149,12 @@ body {
                         height: 35px;
                         font-size: 20px;
                     }
+                    @media (max-width:991px) {
+                        margin-top: 30px;
+                    }
+                    @media (max-width:767px) {
+                        margin-top: 10px;
+                    }
                     &:hover {
                         background-color: #192D79;
                         color: #FCFF9F;
@@ -166,9 +172,7 @@ body {
                         display: none;
                     }
 
-                    @media (max-width:991px) {
-                        margin-top: 30px;
-                    }
+
                 }
 
                 .more-btn {
@@ -202,6 +206,9 @@ body {
                     @media (max-width:991px) {
                         font-size: 50px;
                     }
+                    @media (max-width:767px) {
+                        font-size: 40px;
+                    }
 
                 }
 
@@ -212,18 +219,9 @@ body {
                     @media (max-width:991px) {
                         font-size: 30px;
                     }
-                }
-                .sample03-notshow{
-                    @media (max-width:659px) {
-                        display: none;
+                    @media (max-width:767px) {
+                        font-size: 20px;
                     }
-                }
-                .sample03-show{
-                    display: none;
-                    @media (max-width:659px) {
-                        display: block;
-                    }
-
                 }
             }
 
@@ -252,11 +250,13 @@ body {
                     // top: 35%;
                     left: calc(50% - 160px);
                 }
-                @media (max-width:659px) {
-                    top: 70px;
-                    left: calc(50% - 120px);
+                @media (max-width:767px) {
+                    font-size: 40px;
+                    top: 60px;
+                    left: calc(50% - 100px);
                 }
             }
+
         }
 
     }
@@ -299,6 +299,9 @@ body {
                 @media (max-width:991px) {
                     text-align: center;
                     left: calc(50% - 170px);
+                }
+                @media (max-width:767px) {
+                    left: calc(50% - 140px);
                 }
 
 
@@ -381,6 +384,9 @@ body {
                     @media (max-width:991px) {
                         font-size: 50px;
                     }
+                    @media (max-width:767px) {
+                        font-size: 40px;
+                    }
                 }
 
                 .sample-content {
@@ -394,6 +400,9 @@ body {
 
                     @media (max-width:991px) {
                         font-size: 30px;
+                    }
+                    @media (max-width:767px) {
+                        font-size: 20px;
                     }
                 }
             }
@@ -416,10 +425,27 @@ body {
                     font-size: 50px;
                     left: 135px;
                 }
+                @media (max-width:767px) {
+                    font-size: 40px;
+                    top: 60px;
+                    left: calc(50% - 100px);
+                }
             }
         }
     }
 
+    .sample-notshow{
+        @media (max-width:767px) {
+            display: none;
+        }
+    }
+    .sample-show{
+        display: none;
+        @media (max-width:767px) {
+            display: block;
+        }
+
+    }
     nav.sample-nav {
         .container-fluid {
             .navbar-brand {
