--- a/css/sample.css
+++ b/css/sample.css
@@ -103,8 +103,8 @@ body .sample03-container nav.nav-03 {
 body .sample03-container main.sample03-main {
   position: relative;
   width: 100%;
-  height: calc(100vh - 110px);
-  background-image: url("../img/sample3-BG.png");
+  height: calc(100vh - 90px);
+  background-image: url("../img/sample3-BG-2.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -296,7 +296,7 @@ body .sample04-container main.sample04-main {
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url("../img/sample4-BG.png");
+  background-image: url("../img/sample4-BG-2.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
