--- a/css/sample.scss
+++ b/css/sample.scss
@@ -103,8 +103,8 @@ body {
         main.sample03-main {
             position: relative;
             width: 100%;
-            height: calc(100vh - 110px);
-            background-image: url("../img/sample3-BG.png");
+            height: calc(100vh - 90px);
+            background-image: url("../img/sample3-BG-2.png");
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -281,7 +281,7 @@ body {
             position: relative;
             width: 100%;
             height: 100vh;
-            background-image: url("../img/sample4-BG.png");
+            background-image: url("../img/sample4-BG-2.png");
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
