--- a/css/sample.css
+++ b/css/sample.css
@@ -96,7 +96,8 @@ body .sample03-container nav.nav-03 {
 
 @media (max-width: 991px) {
   body .sample03-container nav.nav-03 {
-    background-image: linear-gradient(130deg, #FFFFFF 80%, #192D79 80%);
+    background-image: none;
+    background-color: #FFFFFF;
   }
 }
 
@@ -413,9 +414,15 @@ body .sample04-container main.sample04-main .sample-text .sample-title {
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 575px) {
   body .sample04-container main.sample04-main .sample-text .sample-title {
     font-size: 40px;
+  }
+}
+
+@media (max-width: 399px) {
+  body .sample04-container main.sample04-main .sample-text .sample-title {
+    font-size: 35px;
   }
 }
 
@@ -437,7 +444,7 @@ body .sample04-container main.sample04-main .sample-text .sample-content {
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 575px) {
   body .sample04-container main.sample04-main .sample-text .sample-content {
     font-size: 20px;
   }
@@ -466,11 +473,17 @@ body .sample04-container main.sample04-main #fade2 {
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 575px) {
   body .sample04-container main.sample04-main #fade2 {
     font-size: 40px;
-    top: 60px;
-    left: calc(50% - 100px);
+    top: 0px;
+    left: calc(50% - 50px);
+  }
+}
+
+@media (max-width: 399px) {
+  body .sample04-container main.sample04-main #fade2 {
+    font-size: 35px;
   }
 }
 
@@ -586,6 +599,13 @@ body nav.sample-nav .container-fluid ul .nav-link {
 @media (max-width: 1199px) {
   body nav.sample-nav .container-fluid ul .nav-link {
     padding: 0px 10px;
+  }
+}
+
+@media (max-width: 991px) {
+  body nav.sample-nav .container-fluid ul .nav-link {
+    text-align: center;
+    color: #192D79;
   }
 }
 
