--- a/css/sample.css
+++ b/css/sample.css
@@ -105,7 +105,7 @@ body .sample03-container main.sample03-main {
   position: relative;
   width: 100%;
   height: calc(100vh - 90px);
-  background-image: url("../img/sample3-BG-2.png");
+  background-image: url("../img/sample3-BG.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -326,7 +326,7 @@ body .sample04-container main.sample04-main {
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url("../img/sample4-BG-2.png");
+  background-image: url("../img/sample4-BG.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -648,7 +648,7 @@ body nav.sample-nav .container-fluid ul .nav-link img {
   }
 }
 
-body nav.sample-nav .container-fluid ul .nav-link .nav-link.active {
+body nav.sample-nav .container-fluid ul .nav-link.active {
   color: #F9EB21;
 }
 
