--- a/css/sample.scss
+++ b/css/sample.scss
@@ -105,7 +105,7 @@ body {
             position: relative;
             width: 100%;
             height: calc(100vh - 90px);
-            background-image: url("../img/sample3-BG-2.png");
+            background-image: url("../img/sample3-BG.png");
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -302,7 +302,7 @@ body {
             position: relative;
             width: 100%;
             height: 100vh;
-            background-image: url("../img/sample4-BG-2.png");
+            background-image: url("../img/sample4-BG.png");
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -557,10 +557,9 @@ body {
                             width: 30px;
                         }
                     }
-
-                    .nav-link.active {
-                        color: #F9EB21;
-                    }
+                }
+                .nav-link.active {
+                    color: #F9EB21;
                 }
             }
 
