--- a/css/sample.scss
+++ b/css/sample.scss
@@ -160,6 +160,9 @@ body {
                     @media (max-width:767px) {
                         margin-top: 10px;
                     }
+                    @media (max-width:575px) {
+                        font-size: 18px;
+                    }
                     &:hover {
                         background-color: #192D79;
                         color: #FCFF9F;
@@ -349,7 +352,9 @@ body {
                         height: 35px;
                         font-size: 20px;
                     }
-
+                    @media (max-width:575px) {
+                        font-size: 18px;
+                    }
                     &:hover {
                         background-color: #192D79;
                         color: #FCFF9F;
